// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to render 1`] = `
<div>
  <div
    class="theme-editor_root__mrulgs0"
  >
    <form
      class="theme-editor_editorRoot__mrulgs3"
    >
      <input
        class="theme-editor_editorInput__mrulgs4 style_transition_all__59wy0241"
        placeholder="No theme"
        readonly=""
        tabindex="1"
        type="text"
        value="foo"
      />
      <button
        aria-label="submit"
        class="theme-editor_submitButtonHidden__mrulgs7 theme-editor_submitButton__mrulgs5 style_enabledIconButtonVariants_emerald__16ett8m10 style_enabledIconBase__16ett8m5 style_iconBase__16ett8m1 style_transition_all__59wy0241"
        disabled=""
        type="submit"
      >
        <span
          class="check_medium_emerald__4p5k6ic style_iconMedium__qkwts32 style_iconBase__qkwts30"
        />
      </button>
      <button
        aria-label="cancel"
        class="theme-editor_cancelButtonHidden__mrulgs8 theme-editor_cancelButton__mrulgs6 style_enabledIconButtonVariants_gray__16ett8mx style_enabledIconBase__16ett8m5 style_iconBase__16ett8m1 style_transition_all__59wy0241"
        disabled=""
        type="button"
      >
        <span
          class="x_medium_gray__ak7ds79 style_iconMedium__qkwts32 style_iconBase__qkwts30"
        />
      </button>
    </form>
    <button
      aria-label="edit"
      class="theme-editor_edit__mrulgs2 style_enabledIconButtonVariants_orange__16ett8m11 style_enabledIconBase__16ett8m5 style_iconBase__16ett8m1 style_transition_all__59wy0241"
      type="button"
    >
      <span
        class="pencil_medium_orange__1mszgw0d style_iconMedium__qkwts32 style_iconBase__qkwts30"
      />
    </button>
  </div>
</div>
`;

exports[`should be able to render without theme 1`] = `
<div>
  <div
    class="theme-editor_root__mrulgs0"
  >
    <form
      class="theme-editor_editorRoot__mrulgs3"
    >
      <input
        class="theme-editor_editorInput__mrulgs4 style_transition_all__59wy0241"
        placeholder="No theme"
        readonly=""
        tabindex="1"
        type="text"
        value=""
      />
      <button
        aria-label="submit"
        class="theme-editor_submitButtonHidden__mrulgs7 theme-editor_submitButton__mrulgs5 style_enabledIconButtonVariants_emerald__16ett8m10 style_enabledIconBase__16ett8m5 style_iconBase__16ett8m1 style_transition_all__59wy0241"
        disabled=""
        type="submit"
      >
        <span
          class="check_medium_emerald__4p5k6ic style_iconMedium__qkwts32 style_iconBase__qkwts30"
        />
      </button>
      <button
        aria-label="cancel"
        class="theme-editor_cancelButtonHidden__mrulgs8 theme-editor_cancelButton__mrulgs6 style_enabledIconButtonVariants_gray__16ett8mx style_enabledIconBase__16ett8m5 style_iconBase__16ett8m1 style_transition_all__59wy0241"
        disabled=""
        type="button"
      >
        <span
          class="x_medium_gray__ak7ds79 style_iconMedium__qkwts32 style_iconBase__qkwts30"
        />
      </button>
    </form>
    <button
      aria-label="edit"
      class="theme-editor_edit__mrulgs2 style_enabledIconButtonVariants_orange__16ett8m11 style_enabledIconBase__16ett8m5 style_iconBase__16ett8m1 style_transition_all__59wy0241"
      type="button"
    >
      <span
        class="pencil_medium_orange__1mszgw0d style_iconMedium__qkwts32 style_iconBase__qkwts30"
      />
    </button>
  </div>
</div>
`;
